--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@pinecone-database/pinecone": "^0.0.14",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
@@ -17,7 +19,6 @@
     "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
-    "googleapis": "^118.0.0",
     "langchain": "^0.0.67",
     "next": "13.3.2",
     "postcss": "^8.4.23",
@@ -26,5 +27,8 @@
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4",
     "youtube-transcript": "^1.0.6"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
