--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
-    "functions": {
-      "api/test.js": {
-        "maxDuration": 10
-      }
+  "functions": {
+    "api/store.ts": {
+      "maxDuration": 10
+    },
+    "api/chat.ts": {
+      "maxDuration": 10
     }
   }
+}
