--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "functions": {
-    "api/store.ts": {
-      "maxDuration": 10
-    },
-    "api/chat.ts": {
-      "maxDuration": 10
+    "pages/api/**/*.ts": {
+      "maxDuration": 60
     }
   }
 }
